--- a/DoAnMon/Views/ClassRooms/AddListSV.cshtml
+++ b/DoAnMon/Views/ClassRooms/AddListSV.cshtml
@@ -8,10 +8,10 @@
 
 <form asp-action="ImportDataFromExcel" method="post" enctype="multipart/form-data">
     <div class="form-group">
-        <label for="excelFile">Choose Excel File:</label>
+        <label for="excelFile">File danh sách sinh viên:</label>
         <input type="file" class="form-control-file" id="excelFile" name="excelFile">
     </div>
-    <button type="submit" class="btn btn-primary">Upload and Import</button>
+    <button type="submit" class="btn btn-primary">Tải lên</button>
 </form>
 
 
