--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -908,6 +908,14 @@
 	<div class="text-center">
 		<h1 class="display-4" style="font-family: 'Poppins', sans-serif">Let's Study With Us</h1>
 		<p id="currentDateTime" style="font-family: 'Poppins', sans-serif"></p>
+		
+		@foreach (var date in Model.ClassDates)
+		{
+			<div>
+				@date.Start.ToString("dddd, dd/MM/yyyy") start at: @date.Start.ToString("HH:mm") to @date.End.ToString("HH:mm")
+			</div>
+		}
+
 	</div>
 </div>
 
