--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -316,21 +316,21 @@
             @{
                 if (Model != null)
                 {
-                        @foreach (var viewModel in Model)
-                        {
-                            <div class="classroom" data-id="@viewModel.ClassRoom.Id">
-                                <div class="card-top" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/@viewModel.ClassRoom.backgroundUrl);background-size: cover; background-position:center;color: white;">
-                                    <h2 style="font-family: Poppins, sans-serif; font-size: 20px">@viewModel.ClassRoom.Name</h2>
-                                    <div class="meta" style="font-family: Poppins, sans-serif; font-size: 12px;font-weight:300;color: white;">@viewModel.ClassRoom.Description</div>
-                                    <p style="padding-top: 4%; font-family: Poppins, sans-serif; font-size: 15px; font-weight:500">@viewModel.Owner.Name</p>
-                                </div>
-                                <div class="card-bottom">
-                                    <img class="PNzAWd" aria-hidden="true" src="/Imgs_avtUser/@viewModel.Owner.UrlAvt">
-                                    <a href="@viewModel.ClassRoom.RoomOnline" id="diemDanhBtn" data-class-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" target="_blank" style="font-family: Poppins, sans-serif; font-size: 14px;font-weight: 600;">Giảng đường</a>
-                                    <a asp-action="Details" asp-route-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" style="margin-top: 10px; font-family: Poppins, sans-serif; font-size: 14px;font-weight:600;">Lớp học</a>
-                                </div>
+                    @foreach (var viewModel in Model)
+                    {
+                        <div class="classroom" data-id="@viewModel.ClassRoom.Id">
+                            <div class="card-top" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/images/@viewModel.ClassRoom.backgroundUrl);background-size: cover; background-position:center;color: white;">
+                                <h2 style="font-family: Poppins, sans-serif; font-size: 20px">@viewModel.ClassRoom.Name</h2>
+                                <div class="meta" style="font-family: Poppins, sans-serif; font-size: 12px;font-weight:300;color: white;">@viewModel.ClassRoom.Description</div>
+                                <p style="padding-top: 4%; font-family: Poppins, sans-serif; font-size: 15px; font-weight:500">@viewModel.Owner.Name</p>
                             </div>
-                        }
+                            <div class="card-bottom">
+                                <img class="PNzAWd" aria-hidden="true" src="/Imgs_avtUser/@viewModel.Owner.UrlAvt">
+                                <a href="@viewModel.ClassRoom.RoomOnline&User=@user.Id&class=@viewModel.ClassRoom.Id" id="diemDanhBtn" data-class-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" target="_blank" style="font-family: Poppins, sans-serif; font-size: 14px;font-weight: 600;">Giảng đường</a>
+                                <a asp-action="Details" asp-route-id="@viewModel.ClassRoom.Id" class="btn btn-primary btn-info btn-custom" style="margin-top: 10px; font-family: Poppins, sans-serif; font-size: 14px;font-weight:600;">Lớp học</a>
+                            </div>
+                        </div>
+                    }
                 }
             }
         </div>
@@ -504,34 +504,16 @@
             event.preventDefault(); // Prevent the default link action
             var classId = $(this).data('class-id');
             var roomOnlineUrl = $(this).attr('href');
-            var ajaxUrl = '@Url.Action("DiemDanhAsync", "ClassRooms")';
+            var ajaxUrl = '@Url.Action("DiemDanhIn", "ClassRooms")';
 
-            console.log('AJAX URL:', ajaxUrl); // Log the URL to verify it's correct
-            console.log('link URL:', roomOnlineUrl);
-            // $.ajax({
-            //     url: ajaxUrl,
-            //     type: 'POST',
-            //     data: { classId: classId },
-            //     success: function (response) {
-            //         if (response.success) {
-            //             console.log('Điểm danh thành công');
-            //             // Continue the default link action after successful attendance
-            //             window.open(roomOnlineUrl, '_blank');
-            //         } else {
-            //             console.log('Điểm danh thất bại');
-            //         }
-            //     },
-            //     error: function (xhr, status, error) {
-            //         console.error('Có lỗi xảy ra: ' + error);
-            //     }
-            // });
-
-            $.post("/ClassRooms/DiemDanh", { classId: classId }, function (data) {
+            $.post("/ClassRooms/DiemDanhIn", { classId: classId }, function (data) {
                 if (data.success) {
                     console.log('Điểm danh thành công');
                     window.open(roomOnlineUrl, '_blank');
                 }
                 else {
+                    console.log(data.error);
+                    alert(data.error);
                     console.log('Điểm danh thất bại');
                 }
             });
